Add QR | Add OpenGraph Support
